# projects

./: .gitignore  LICENSE.txt  Makefile  README.md
000-b-tree/: README.md  btree.ha  node.ha
000-bare/: decode.go  decode_test.go  go.mod  schema.go  schema_test.go
000-chip8/: Cargo.toml  lib.rs  terminal.rs
000-fuse/: Makefile  compile_flags.txt  overlayfs.c  uolayfs.c
000-md2html/: example.md  main.ts  main_test.ts
000-shittyc/: ast.rs  codegen.rs  common.rs  ir.rs  lex.rs  lib.rs
000-syntax-highlight/: main.ts  main_test.ts
000-websocket/: Makefile  echo.ha
001-minesweeper/: minefield.js  minesweeper-solver.js  minesweeper.html
002-sudoku/: sudoku.html  sudoku.js
003-splay-tree/: splay-tree.hh  test.cc
004-percentiles/: percentiles.py
005-rust-hashmaps/: Cargo.toml
005-rust-hashmaps/src/: better_chaining.rs  chaining.rs  main.rs  openaddressing.rs  openaddressing.rs~
006-clang-plugin/: CMakeLists.txt  helloworldplugin.cpp
006-clang-plugin/example/: analyse.sh  example.c
007-mini-vm/: Makefile  minivm.c
008-llvm-ir-pass/: CMakeLists.txt  HelloWorld.cpp  example.c  example.ll  run.sh
009-interpreter/: Cargo.toml
009-interpreter/src/: ast.rs  interpreter.rs  lexer.rs  main.rs  parser.rs
010-taichi-ca/: ca.py  reaction-diffusion-2.py  reaction-diffusion.py
011-jump-n-run/: index.html  script.js  utils.js
011-jump-n-run/canvas-fun/: index.html  script.js  utils.js
012-very-bad-vectorizer/: README.md
012-very-bad-vectorizer/VBV/: CMakeLists.txt  Vectorize.cpp
012-very-bad-vectorizer/example/: .gitignore  Makefile  axb.c  axb_main.c  bin  naive.c
013-enum-match/: Cargo.toml
013-enum-match/src/: lib.rs
013-enum-match/test-crate/: Cargo.toml
014-advent-of-code/: .gitignore  05.rs  07.cpp
014-advent-of-code/2022/: 01.go  02.py  03.c  04.mjs  06.java  07.cpp
014-advent-of-code/2023/: Makefile
015-shitty-sve-ie/: Makefile  shittysveie.c
015-shitty-sve-ie/example/: add_vecs.c  sve_add_vecs.2.s  sve_add_vecs.s
015-shitty-sve-ie/sme/: README.md  arm_sme.h  compile_flags.txt  sme.cc
017-qemu+dwarf/: .gitignore  Makefile  README.md  plugin.cc  utils.hh
018-ssh-snake/: config.json  game.go  go.mod  go.sum  list.go  server.go
019-gcc-loop-plugin/: Makefile  compile_flags.txt  example.c  loop-counter-plugin.cc  loop-counter-rt.cc
020-cson/: Makefile  cson.c  cson.h  test-run.c
021-rust-json/: Cargo.toml
022-calltracer/: .gitignore  libselfpatch.c  template.asm
023-proto2port/: .gitignore  go.mod  go.sum  proto2port.go  test.config.json
024-rustris/: Cargo.toml
025-rhall/: Cargo.toml  README.md
026-compress/: Cargo.toml
027-testing-systemc/: .gitignore  Makefile  README.md  compile_flags.txt  counter.cc  env.sh  mini-cpu.cc
029-gol/: Cargo.toml
030-1brc/: Cargo.toml
030-mnist/: Cargo.toml
031-bad-backend/: CMakeLists.txt
031-bad-backend/examples/: sum.ll  sum.sh
031-bad-backend/src/: Target.cpp
031-rust-exprtmpl/: Cargo.toml
032-base64/: Makefile  base64.c  base64.go  base64.ha  base64.java  base64.py  base64.rs  rust-project.json
033-bare/: decode.go  decode_test.go
034-websocket/: Makefile  chat.html  echo.ha  go.mod  ws-chat.go  ws-client.go  ws.go  ws.ha
035-fuse-overlayfs/: Makefile  compile_flags.txt  example-empty.c  uolayfs.c
036-b-tree/: Makefile  README.md  buggy.diff  node.ha
037-simd-stuff/: Makefile  base64.c  bigint.c  compile_flags.txt  rfc3339.c
038-shittyc/: Cargo.toml  ast.rs  codegen.rs  common.rs  lex.rs  lib.rs
039-syntax-highlight/: example.c  example.html  main.ts  main_test.ts  test-template.html
040-chip8/: Cargo.toml  lib.rs  terminal.rs
040-chip8/wasm-ui/: Cargo.toml  Makefile  index.html  lib.rs
041-md2html/: example.html  example.md  main_test.ts
042-wasm2libgccjit/: Cargo.toml  lib.rs  wasm2libgccjit.go
043-warn-packed/: CMakeLists.txt  Makefile  lib.cpp
044-cse/: CMakeLists.txt  ShittyCSE.cpp  test.ll
045-advent-of-code/: 02.py  03.py  04.py  05.go  06.py  07.py  08.py  09.py  10.py  11.py  12.py  13.py  14.py  Makefile
(+88 files in other folders)
