[package]
name = "chip8"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1           # Use slightly better optimizations.
overflow-checks = false # Disable integer overflow checks.

[lib]
path = "./lib.rs"

[[bin]]
name = "chip8-term"
path = "./terminal.rs"

[dependencies]
rand = "*"
crossterm = "*"
