[package]
name = "chip8-wasm-ui"
version = "0.1.0"
authors = ["Lou Knauer <lou.knauer@sipearl.com>"]
edition = "2018"

[lib]
path = "lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
js-sys = "*"
chip8 = { path = "../", default-features = false }
web-sys = { version = "*", features = [
    'CanvasRenderingContext2d',
    'Document',
    'Element',
    'HtmlCanvasElement',
    'Window',
] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.dev]
opt-level = 1

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
